--- a/FormsPractice/package.json
+++ b/FormsPractice/package.json
@@ -21,12 +21,13 @@
     "@angular/router": "~12.1.0",
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.1.3",
-    "jquery": "^3.6.0",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.2.0",
-    "zone.js": "~0.11.4",
     "firebase": "^9.4.0",
-    "rxfire": "^6.0.0"
+    "jquery": "^3.6.0",
+    "rxfire": "^6.0.0",
+    "rxjs": "~6.6.0",
+    "sweetalert2": "^11.3.0",
+    "tslib": "^2.2.0",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.1.4",
